2008-11-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/preview.c (WritePreviewImage): Solarize requires a
	threshold argument.
	* coders/vid.c (WriteVIDImage): Eliminate memory leak.
	* magick/montage.c (MontageImages): Fix continued use of freed
	memory.

2008-11-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/enhance.c (BuildChannelHistograms): EnhanceImage() and
	NormalizeImage() now share one common function for generating the
	histogram.
	* magick/enhance.c (ModulateImage): Improve performance a bit.
	(ContrastImage): Improve performance a bit.
	(GammaImage): Improve performance a bit.

2008-11-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/authors.rst: List Mark Mitchell as an author.
	* utilities/tests/msl_composite.sh: Fix 'rm -f' without a valid
	argument which annoyed NetBSD.

2008-11-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh: GraphicsMagick 1.3.1 released.
	* coders/fits.c: Impose a limit on the length of the row PDU.
	Make sure that GraphicsMagick version information does not
	overflow the length allowed by a row PDU.

2008-11-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jpeg.c (WriteJPEGImage): Use DCT algorithm default from
	the library rather than the header file.
	* magick: Adjust OpenMP scheduling options based on observed
	behavior.

2008-11-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/shear.c (IntegralRotateImage): Added OpenMP acceleration
	for rotate by 90 and 270 degrees.
	* configure.ac: New --disable-openmp-slow configure for disabling
	use of OpenMP for algorithms which may run slower on operating
	systems with crummy thread libraries.  This still allows gaining
	the benefits from OpenMP for CPU hogs.  Verified to help with
	FreeBSD 7.0 and Apple OS-X Leopard.
	* magick/semaphore.c: Trimmed out the debug code in order to
	obtain a bit more performance.

2008-11-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
